last commit did not fix bug, added overflow to solve issue

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -400,6 +400,7 @@ nav {
 	font-family: 'Roboto', sans-serif;
 	position: relative;
 	border-top: 1px solid black;
+	overflow: auto;
 }
 
 #contactTextbox {
@@ -580,6 +581,7 @@ nav {
 #about {
 	height: auto;
 	display: block;
+	overflow: auto;
 
 	#aboutContent>.mainContent {
 		border-bottom: none;
